api/src/routes/snapshots/nightlio_api__routes__extras__tests__preferences_get_200_after_put.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "theme": "synthwave"
  },
  "status": 200
}
