api/src/routes/snapshots/nightlio_api__routes__extras__tests__preferences_put_200.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "status": "success",
    "theme": "synthwave"
  },
  "status": 200
}
