api/src/routes/snapshots/nightlio_api__routes__extras__tests__preferences_put_400_invalid_theme.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "error": "theme must be one of: dark, default, light, synthwave"
  },
  "status": 400
}
