api/src/routes/snapshots/nightlio_api__routes__extras__tests__preferences_put_401.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "error": "Authorization header required"
  },
  "status": 401
}
