api/src/routes/snapshots/nightlio_api__routes__extras__tests__preferences_put_403_cookie_missing_csrf_header.snap
---
source: src/routes/extras.rs
expression: value
---
{
  "body": {
    "error": "Missing required request header"
  },
  "status": 403
}
